<resources>
    <string name="app_name">Voyage of Life</string>

    <!--  CONTENT DESCRIPTION  -->
    <string name="cd_background_wallpaper">Background Wallpaper</string>
    <string name="cd_back">Back to previous page</string>
    <string name="cd_image_story">Image Story</string>
    <string name="cd_share">Share Story</string>
    <string name="cd_save_story">Save Story</string>
    <string name="cd_upload_story">Upload Story</string>
    <string name="cd_open_camera">Open Camera</string>
    <string name="cd_open_gallery">Open Gallery</string>
    <string name="cd_add_story">Add Story</string>

    <!--  UI  -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or_create_account">Or Create Account</string>
    <string name="msg_welcome">Known the tales of other\'s voyage through life.</string>
    <string name="welcome_back">Welcome \nBack!</string>
    <string name="create_account">Create \nAccount</string>
    <string name="doesnt_have_an_account">Doesn\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="action_positive">YES</string>
    <string name="action_negative">NO</string>
    <string name="action_neutral">CANCEL</string>
    <string name="retry">Retry</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="description">Description</string>

    <!--  MESSAGE  -->
    <string name="email_error">Please enter a valid email address</string>
    <string name="password_error">Password must contain 8 characters</string>
    <string name="login_success">Welcome Back %1$s!</string>
    <string name="register_success">%1$s, Please login to continue</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="permission_not_granted">Permission not Granted</string>
    <string name="msg_logout">Do you really want to Logout?</string>

    <string name="placeholder_name">Faishal</string>
    <string name="placeholder_date">26 October 2006</string>
    <string name="style_error">Error occurred</string>
    <string name="maps">Maps</string>
    <string name="error_location">Can\'t get Location</string>
    <string name="location">Location</string>
    <string name="msg_location">Do you want to add Location to your Story?</string>

</resources>