<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.zhalz.voyageoflife.ui.welcome.WelcomeActivity" />

        <variable
            name="login"
            type="android.content.Intent" />

        <variable
            name="register"
            type="android.content.Intent" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_background_wallpaper"
            android:fitsSystemWindows="false"
            android:scaleType="centerCrop"
            android:src="@drawable/many_goblin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blurry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_shape"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingHorizontal="36dp"
            android:paddingVertical="32dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                style="@style/TextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="start"
                android:singleLine="false"
                android:text="@string/msg_welcome"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="@color/white"
                android:onClick="@{() -> activity.startActivity(login)}"
                tools:ignore="VisualLintButtonSize" />

            <com.google.android.material.button.MaterialButton
                style="@style/ThemeOverlay.Material3.Button.TextButton.CustomButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:drawableEnd="@drawable/ic_next"
                android:drawableTint="@color/always_white"
                android:padding="0dp"
                android:onClick="@{() -> activity.startActivity(register)}"
                android:text="@string/or_create_account"
                android:textColor="@color/always_white"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>