<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.zhalz.voyageoflife.ui.upload.UploadActivity" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.detail.DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="440dp"
                app:contentScrim="@color/transparent"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cd_image_story"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="none"
                    app:shapeAppearance="@style/RoundBottomCorner"
                    android:src="@drawable/goblin" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_back"
                    app:navigationOnClickListener="@{() -> activity.finish()}" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/sv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp"
            android:fillViewport="true"
            android:padding="32dp"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:gravity="top"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/cd_upload_story"
            app:icon="@drawable/ic_check"
            app:iconSize="28dp"
            app:iconTint="@color/green"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="center|bottom"
            app:shapeAppearance="@style/RoundCorner"
            tools:ignore="ImageContrastCheck,VisualLintOverlap" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/CustomFab"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginEnd="36dp"
            android:contentDescription="@string/cd_open_camera"
            android:src="@drawable/ic_camera"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|end"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/CustomFab"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="36dp"
            android:contentDescription="@string/cd_open_gallery"
            android:src="@drawable/ic_gallery"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|start"
            tools:ignore="ImageContrastCheck" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>